<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9FAFF"
    android:orientation="vertical"
    android:weightSum="2"
    android:gravity="center"
    tools:context=".activities.PhoneAuthenticationActivity">
    <ImageView
        android:id="@+id/login_image"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:background="@drawable/access"
        android:contentDescription="@string/image"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_number_to_continue"
        android:gravity="center"
        android:textColor="#444444"
        android:textSize="25sp"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="40dp"
        android:paddingTop="10dp"
        android:paddingRight="40dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="+91"
            android:textColor="#5E5E5E"
            />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:paddingStart="10dp"
            android:hint="@string/enter_number"
            android:textColor="#1F1F1F"
            tools:ignore="RtlSymmetry"
            android:autofillHints="phone"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:background="#6372FF"
        android:text="@string/login"
        android:id="@+id/loginBtn"
        android:shadowRadius="10"
        android:textColor="#ffffff" />



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:layout_marginHorizontal="30dp"
        android:paddingStart="10dp"
        android:hint="@string/enter_otp"
        android:id="@+id/otp"
        android:enabled="false"
        android:textColor="#1F1F1F"
        tools:ignore="RtlSymmetry" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:background="#6372FF"
        android:text="@string/verify"
        android:id="@+id/verify"
        android:enabled="false"
        android:textColor="#ffffff" />
</LinearLayout>